tests/sources/invalid/expressions/implicit_assign_undefined_rhs.fire
// Semantic error: implicit-declaration assignment whose right-hand side is
// itself an undefined identifier, so no type can be inferred at all.

fn implicit_assign_undefined_rhs() -> void {
    y = undefinedSource;  //~ ERROR FS-PARSE-0003 @9
//~^ ERROR FS-PARSE-0003 @5
}
